[project]
name = "rf-diffusion-all-atom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mark Szepieniec", email = "mszepieniec@xyme.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "assertpy>=1.1",
    "deepdiff>=8.4.2",
    "e3nn>=0.5.6",
    "fire>=0.7.0",
    "hydra-core>=1.3.2",
    "icecream>=2.1.4",
    "numpy<=2",
    "omegaconf>=2.3.0",
    "openbabel-wheel>=3.1.1.21",
    "opt-einsum>=3.4.0",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
